--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/sanitize-html": "^2.16.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "pg": "^8.18.0",
+    "sanitize-html": "^2.17.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
